<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shakespearean Hangman</string>

    <!-- Main Menu Strings -->
    <string name="portrait_description">Portrait of Shakespeare</string>
    <string name="new_game">New Game</string>
    <string name="two_player_game">Two-Player Game</string>
    <string name="player_profiles">Player Profiles</string>
    <string name="options">Options</string>
    <string name="about">About</string>

    <!-- Add New Profile -->
    <string name = "profile_title_enter">Enter</string>

    <!-- Options -->
    <string name="title_activity_options">Options</string>

    <!-- About -->
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_info">Shakespearean Hangman tests your knowledge of Shakespeare\'s poems and plays, from the most famous to the most obscure.
                              Play alone or compete in a six-game tournament with a friend.</string>
    <string name="about_creators">Creators: Matt Hendrickson, Cassie Schwendiman, and Katherine Thayer</string>
    <string name="music_attribution">Title Music by Setuniman at www.freesound.org/people/setuniman/</string>
    <string name="image_attribution">Photo citation: "Shakespeare Cobbe portrait detail" by Unknown, photo by Lefteris
        Pitarakis/Associated Press, via Wikimedia Commons</string>

    <!-- Game -->
    <string name="title_activity_game">GameActivity</string>
    <string name="hangman_image_description">Hangman Image</string>

    <string-array name="keyboard">
        <item>QWERTYUIOP</item>
        <item>ASDFGHJKL</item>
        <item>ZXCVBNM</item>
    </string-array>

    <!-- Result -->
    <string name="title_activity_results">ResultsActivity</string>
    <string name="result_win">You Won!</string>
    <string name="result_loss">You Lost!</string>
    <string name="answer_is">The answer is:</string>
    <string name="main_menu">Main Menu</string>
    <string name="continue_next">Continue</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Two Player game -->
    <string name="title_activity_two_player_game">TwoPlayerGameActivity</string>
    <string name="title_activity_two_player_results">TwoPlayerResultsActivity</string>

    <string name="title_activity_two_player_setup">TwoPlayerSetupActivity</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_tournament_result">TournamentResultActivity</string>

    <string name="title_activity_choose_profile">ChooseProfile</string>
    <string name="title_activity_player_profiles">PlayerProfiles</string>
    <string name="title_activity_add_new_profile">AddNewProfile</string>

    <!-- Player Profiles -->
    <string name="add_new_profile_button">Add New Profile</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
