<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainMenu">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">
        <cs371m.shakespeareanhangman.ScriptView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:gravity="top|center_horizontal"
                android:paddingBottom="20sp"
                android:lineSpacingMultiplier="0.6"/>
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/imageView"
                android:src="@drawable/shakespeareportrait"
                android:layout_margin="10dp"
                android:contentDescription="@string/portrait_description"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game"
                android:id="@+id/new_game_button"
                android:onClick="buttonClick"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_player_game"
                android:id="@+id/two_player_game_button"
                android:onClick="buttonClick"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_profiles"
                android:id="@+id/player_profiles_button"
                android:onClick="buttonClick"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:id="@+id/options_button"
                android:onClick="buttonClick"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:id="@+id/about_button"
                android:onClick="buttonClick"/>
    </LinearLayout>
</RelativeLayout>
