<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_info"
        android:fontFamily="serif"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_creators"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_attribution"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_attribution"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"/>
</LinearLayout>